# postgresql-libpq

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Makefile  PQ.hsc  README.md  Setup.hs  appveyor.yml  cabal.haskell-ci  cabal.project  cabal.project.local.win  cabal.project.macos  cabal.project.win  libpq.cabal  postgresql-libpq.cabal
.github/workflows/: haskell-ci.yml  simple.yml
Database/: PQ.hsc
Database/PostgreSQL/: LibPQ.hsc
cbits/: hs-libpq.h  noticehandlers.c  noticehandlers.h
postgresql-libpq-configure/: .gitignore  CHANGELOG.md  configure  configure.ac  postgresql-libpq-configure.buildinfo.in  postgresql-libpq-configure.cabal
postgresql-libpq-configure/m4/: ax_lib_postgresql.m4
postgresql-libpq-pgconfig/: CHANGELOG.md  Setup.hs  postgresql-libpq-pgconfig.cabal
postgresql-libpq-pkgconfig/: CHANGELOG.md  postgresql-libpq-pkgconfig.cabal
src/Database/PostgreSQL/: LibPQ.hs  LibPQ.hsc
src/Database/PostgreSQL/LibPQ/: Compat.hs  Connect.hsc  Enums.hsc  FFI.hs  Internal.hs  Marshal.hs  Notify.hsc  Oid.hsc  Ptr.hs
test/: Smoke.hs
unix/Database/PostgreSQL/LibPQ/: GHC.hs
windows/Database/PostgreSQL/LibPQ/: GHC.hs
