Name:                postgresql-libpq
Version:             0.8.2.3
Synopsis:            low-level binding to libpq

Description:         This is a binding to libpq: the C application
                     programmer's interface to PostgreSQL. libpq is a
                     set of library functions that allow client
                     programs to pass queries to the PostgreSQL
                     backend server and to receive the results of
                     these queries.

Homepage:            http://github.com/lpsmith/postgresql-libpq
License:             BSD3
License-file:        LICENSE
Author:              Grant Monroe, Leon P Smith, Joey Adams
Maintainer:          Leon P Smith <leon@melding-monads.com>
Copyright:           (c) 2010 Grant Monroe
                     (c) 2011 Leon P Smith
Category:            Database
Build-type:          Custom

-- Unfortunately cabal sdist isn't smart enough to catch all hs-source-dirs
-- whether or not they are behind a conditional
Extra-source-files:  unix/Database/PostgreSQL/LibPQ/*.hs
                     windows/Database/PostgreSQL/LibPQ/*.hs

Cabal-version:       >=1.8
Library
  hs-source-dirs:      src
  if os(windows)
    hs-source-dirs:    windows
  else
    hs-source-dirs:    unix

  Exposed-modules:     Database.PostgreSQL.LibPQ
                       Database.PostgreSQL.LibPQ.GHC

  Build-depends:       base >= 4 && < 5
                     , bytestring

  GHC-Options:       -Wall
  Extra-Libraries:   pq
  -- Other-modules:
  Build-tools:       hsc2hs

source-repository head
  type:     git
  location: http://github.com/lpsmith/postgresql-libpq

source-repository this
  type:     git
  location: http://github.com/lpsmith/postgresql-libpq
  tag:      v0.8.2.3
