AC_PREREQ([2.69])
AC_INIT([Haskell PostgreSQL bindings],[0.10],[oleg.grenrus@iki.fi],[the-url])
AC_CONFIG_MACRO_DIRS([m4])

AC_PROG_CC
AC_PROG_SED

AX_LIB_POSTGRESQL([14.12])

POSTGRESQL_EXTRA_LIBS="pq"
POSTGRESQL_LIBDIR=$(echo "$POSTGRESQL_LDFLAGS"|$SED 's/-L//')
POSTGRESQL_INCLUDEDIR=$(echo "$POSTGRESQL_CPPFLAGS"|$SED 's/-I//')

AC_SUBST([POSTGRESQL_EXTRA_LIBS])
AC_SUBST([POSTGRESQL_LIBDIR])
AC_SUBST([POSTGRESQL_INCLUDEDIR])

AC_CONFIG_FILES([postgresql-libpq-configure.buildinfo])

AC_OUTPUT
